--- a/mlzoomcamp.ipynb
+++ b/mlzoomcamp.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -280,13 +280,13 @@
        "[2160 rows x 12 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"laptops.csv\")\n",
+    "data = pd.read_csv(\"laptops.csv\") #loaded the data source to the project\n",
     "data\n"
    ]
   },
